# rust-quiz-backend

./: .env  Cargo.toml
src/: main.rs
src/models/: quiz.rs  user.rs
src/routes/: auth.rs  error_bodies.rs  mod.rs  quiz.rs  request_bodies.rs
src/utils/: database.rs  hashing.rs  jwt.rs  mod.rs
