[package]
name = "quiz_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio-postgres = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
live-reload = "0.2"
dotenv = "0.15.0"
validator =  { version = "0.14.0", features = ["derive"] }
tokio = "1.17.0"
postgres-types = { version = "0.2.2", features = ["derive"] }
jsonwebtoken = "8"
chrono = "0.4"
pwhash = "1"

